[gd_scene load_steps=6 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://assets/font/font_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/themes/themes.gd" type="Script" id=3]
[ext_resource path="res://assets/icons/gem_48.png" type="Texture" id=4]
[ext_resource path="res://assets/font/font_32.tres" type="DynamicFont" id=5]

[node name="Themes" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/separation = 24

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer"]
margin_right = 360.0
margin_bottom = 142.0
custom_constants/margin_right = 48
custom_constants/margin_top = 32
custom_constants/margin_left = 48

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/MarginContainer"]
margin_left = 48.0
margin_top = 32.0
margin_right = 312.0
margin_bottom = 142.0

[node name="Themes" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 264.0
margin_bottom = 58.0
custom_fonts/font = ExtResource( 2 )
text = "THEMES"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 62.0
margin_right = 264.0
margin_bottom = 110.0
alignment = 1

[node name="GemIcon" type="TextureRect" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 84.0
margin_right = 132.0
margin_bottom = 48.0
texture = ExtResource( 4 )

[node name="GemsLabel" type="Label" parent="VBoxContainer/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 136.0
margin_top = 4.0
margin_right = 180.0
margin_bottom = 43.0
custom_fonts/font = ExtResource( 5 )
text = "123"

[node name="GridContainer" type="GridContainer" parent="VBoxContainer"]
visible = false
margin_top = 154.0
margin_right = 264.0
margin_bottom = 489.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 24
custom_constants/hseparation = 24
columns = 2

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 166.0
margin_right = 360.0
margin_bottom = 545.0
size_flags_vertical = 3
theme = ExtResource( 1 )
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ScrollContainer"]
margin_right = 360.0
margin_bottom = 379.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = -48

[node name="MarginContainer2" type="MarginContainer" parent="VBoxContainer"]
margin_top = 569.0
margin_right = 360.0
margin_bottom = 640.0
custom_constants/margin_right = 48
custom_constants/margin_left = 48
custom_constants/margin_bottom = 32

[node name="Back" type="Button" parent="VBoxContainer/MarginContainer2"]
margin_left = 48.0
margin_right = 312.0
margin_bottom = 39.0
text = "BACK"
align = 0

[connection signal="pressed" from="VBoxContainer/MarginContainer2/Back" to="." method="_on_back"]
